<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogicGatesActivity">


    <EditText
        android:hint="@string/enter_binary_number"
        android:id="@+id/firstBinEditText"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:inputType="number"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        />



    <Spinner
        android:id="@+id/operationSpinner"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@+id/firstBinEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:entries="@array/logicSpinnerItems"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/secondBinEditText"
        android:layout_margin="16dp"
        android:inputType="number"
        android:hint="@string/enter_binary_number"
        app:layout_constraintTop_toBottomOf="@id/operationSpinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:textColor="@color/black"
        android:textSize="25sp"
        />
    <ImageButton
        app:layout_constraintTop_toBottomOf="@id/secondBinEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/logicGatesConvertButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_exchange"
        android:background="@color/white"
        android:contentDescription="@string/button_starts_convert_function" />

    <TextView
        android:layout_margin="16dp"
        android:id="@+id/logicResultTextView"
        app:layout_constraintTop_toBottomOf="@id/logicGatesConvertButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:hint="@string/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>